--- a/html/index.html
+++ b/html/index.html
@@ -4,49 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruby adventure | The Game</title>
+    <title>Scott Pilgrim's adventure | The Game</title>
     <script>
-        //generando número aleatorio
-        function obtenerNumeroAleatorio (min, max) {
+        //VARIABLES GLOBALES
+        let jugador = 0
+        let enemigo = 0
+        let triunfos = 0
+        let derrotas = 0
+        let empates = 0
+        //GENERANDO NÚMERO ALEATORIO PARA EL ATAQUE DEL ENEMIGO.
+        function numeroAleatorio (min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min)
         }
-        //variables
-        let jugador = 0
-        jugador = prompt("Elige un número: 1 para piedra, dos para papel y 3 para tijera")
-        //elección del jugador
-        if (jugador == 1) {
-            alert("Elegiste piedra")
+        //ELECCIÓN DE ATAQUE DEL JUGADOR Y EL ENEMIGO.
+        function elegiendoAtaque (jugada) {
+            let resultado = ""
+            if (jugada == 1) {
+                resultado = "piedra"
+            }
+            else if (jugada == 2) {
+                resultado = "papel"
+            }
+            else if (jugada == 3) {
+                resultado = "tijeras"
+            }
+            else {
+                resultado = "Error, elige un número entre el uno y el tres."
+            }
+            return resultado
         }
-        else if (jugador == 2) {
-            alert("Elegiste papel")
-        }
-        else if (jugador == 3) {
-            alert("Elegiste tijera")
-        }
-        else {
-            alert("Por favor, elige un número entre el 1 y el 3.")
-        }
-        //elección del enemigo
-        let enemigo = obtenerNumeroAleatorio(1,3)
-        if (enemigo == 1) {
-            alert("Enemigo elige piedra")
-        }
-        else if (enemigo == 2) {
-            alert("Enemigo elige papel")
-        }
-        else if (enemigo == 3) {
-            alert("Enemigo elige tijera")
-        }
-        //combate
-        if (enemigo == jugador) {
+        //COMBATE
+        function combate() {
+            if (jugador == enemigo) {
             alert("¡Empate!")
+            empates ++
+            }
+            else if (jugador == 1 && enemigo == 3 || jugador == 2 && enemigo == 1 || jugador == 3 && enemigo == 2) {
+              alert("¡Ganaste!")
+              triunfos ++
+            }
+            else {
+              alert("¡Perdiste!")
+              derrotas ++
+            }
         }
-        else if (jugador == 1 && enemigo == 3 || jugador == 2 && enemigo == 1 || jugador == 3 && enemigo == 2) {
-            alert("¡Ganaste!")
+        //CICLO DE COMBATE
+        while (triunfos < 3 && derrotas < 3) {
+            enemigo = numeroAleatorio(1,3)
+            jugador = prompt("Elige: uno para piedra, dos para papel, tres para tijeras.")
+            //
+            alert("El enemigo eligió " + elegiendoAtaque(enemigo))
+            alert("El jugador eligió " + elegiendoAtaque(jugador))
+            //
+            combate()
         }
-        else {
-            alert("¡Perdiste!")
-        }
+        alert("Ganaste " + triunfos + " veces," + " perdiste " + derrotas + " veces y" + " empataste " + empates + " veces.")
     </script>
 </head>
 <body>
