Maquetando dinamica del juego, selección de personajes y ataques

--- a/html/index.html
+++ b/html/index.html
@@ -28,11 +28,17 @@
     <section id="seleccionar-ataque">
         <h2>Elige tu ataque</h2>
 
-        <p>Tu peleador tiene <span>3</span> vidas</p>
-        <p>Tu peleador enemigo tiene <span>3</span> vidas</p>
+        <p>
+            <span id="peleador-jugador"></span> tiene <span>3</span> vidas.
+        </p>
 
         <p>
-            <button id="btn-fisico">Fisico 🥊</button>  <!-- Fisico vence especial, magico a fisico, especial a magico-->
+            <span id="peleador-enemigo"></span> tiene <span>3</span> vidas.
+        </p>
+
+        <p>
+            <!-- Fisico vence especial, magico a fisico, especial a magico-->
+            <button id="btn-fisico">Fisico 🥊</button>
             <button id="btn-magico">Magico ✨</button>
             <button id="btn-especial">Especial 🔮</button>
         </p>
