Mecánica de combate y seleccion de personajes terminada

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <script src="../js/scott.js"></script>
 </head>
 <body>
-    <h1>Scott Pilgrim's Adventure 👾</h1>
+    <h1>Scott Pilgrim's Adventure</h1>
 
     <section id="seleccionar-peleador">
         <h2>Elige a tu peleador</h2>
@@ -29,11 +29,11 @@
         <h2>Elige tu ataque</h2>
 
         <p>
-            <span id="peleador-jugador"></span> tiene <span>3</span> vidas.
+            <span id="peleador-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas.
         </p>
 
         <p>
-            <span id="peleador-enemigo"></span> tiene <span>3</span> vidas.
+            <span id="peleador-enemigo"></span> tiene <span id="vidas-enemigo">3</span> vidas.
         </p>
 
         <p>
@@ -44,9 +44,7 @@
         </p>
     </section>
 
-    <section id="mensajes">
-        <p>Tu peleador atacó con fuego, el peleador enemigo atacó con tierra -Ganaste!</p>
-    </section>
+    <section id="mensajes"></section>
 
     <section id="reset">
         <button id="btn-reset">Reset</button>
