--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Scott pilgrim's adventure game">
     <meta name="robots" content="index, follow">
     <title>Scott Pilgrim's adventure | The Game</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/mobile.css" media="(max-width: 541px)">
 </head>
 <body>
     <header class="header">
         <div id="logo" class="header__logo">
-            <img class="header__logo--icon"
-            src="../assets/icon/scott-icon.png"
-            alt="scott pilgrim's adventure icon"
-            >
+            <img class="header__logo--icon" src="../assets/icon/scott-icon.png" alt="Scott pilgrim's adventure icon">
             <p class="header__logo--text">
                 Scott Pilgrim's Adventure
             </p>
         </div>
     </header>
-
-    <!-- Select fighter section -->
+    <!-- Choose your fighter section -->
     <section class="select-fighter">
         <h1 class="select-fighter__title title">
             Scott Pilgrim's Adventure
         </h1>
-
         <h2 class="select-fighter__subtitle subtitle">
             Choose your fighter!
         </h2>
-
         <div class="select-fighter__cards">
         </div>
-
         <button class="btn select-fighter__btn">
             Select
         </button>
     </section>
-
     <!-- Canvas section -->
     <section class="game-canvas">
         <h1 class="game-canvas__title title">
@@ -49,40 +42,34 @@
         </h2>
         <canvas class="game-canvas__map"></canvas>
 
-        <!-- onclick -->
-        <button class="btn movement__btn" onmouseup="stopMovement()" onmousedown="moveFighterUp()">Up</button>
+        <!-- Movement btns -->
+        <button class="btn movement__btn" onpointerup="stopMovement()" onpointerdown="moveFighterUp()">Up</button>
         <div class="canvas__btns">
-            <button class="btn movement__btn" onmouseup="stopMovement()" onmousedown="moveFighterRight()">Right</button>
-            <button class="btn movement__btn" onmouseup="stopMovement()" onmousedown="moveFighterDown()">Down</button>
-            <button class="btn movement__btn" onmouseup="stopMovement()" onmousedown="moveFighterLeft()">Left</button>
+            <button class="btn movement__btn" onpointerup="stopMovement()" onpointerdown="moveFighterLeft()">Left</button>
+            <button class="btn movement__btn" onpointerup="stopMovement()" onpointerdown="moveFighterDown()">Down</button>
+            <button class="btn movement__btn" onpointerup="stopMovement()" onpointerdown="moveFighterRight()">Right</button>
         </div>
     </section>
-
     <!-- Select attacks section -->
     <section class="select-attacks">
         <h1 class="select-attacks__title title">
             Scott Pilgrim's Adventure
         </h1>
-
         <h2 class="select-attacks__subtitle subtitle">
             Choose your attack!
         </h2>
-
         <div class="select-attacks__container btns-ataque">
         </div>
-
         <div class="select-attacks__messages">
             <p class="select-attacks__resultado">
                 ¡Ready, Go!
             </p>
-
             <div class="select-attacks__reset">
                 <button class="btn select-attacks__reset--btn">
                     Reset
                 </button>
             </div>
         </div>
-
         <div class="select-attacks__counter">
             <div class="counter__wrapper">
                 <div class="counter__img--player1">
@@ -92,7 +79,6 @@
                 <p class="counter__name--player1"></p>
                 <div class="counter__attacks--player1"></div>
             </div>
-
             <div class="counter__wrapper">
                 <div class="counter__img--player2">
                     <img class="thumbnail--player2" src="" alt="player icon">
@@ -103,7 +89,7 @@
             </div>
         </div>
     </section>
-
+    <!-- Javascript -->
     <script src="../js/scott.js"></script>
 </body>
 </html>
